fixed columns game problems:
canvas was is no longer too big
gems are now placed nicely

--- a/Resources/Columns_Game/attributes.css
+++ b/Resources/Columns_Game/attributes.css
@@ -49,8 +49,9 @@ a{
 {
     /* The background imitates the HTML background */
     background: url(Resources/Images/canvBack.png) no-repeat center center fixed;
-    
-    /* Stretches canvas background over*/
+    display:block;
+    margin-left: auto;
+    margin-right:auto;
     -webkit-background-size: cover;
     background-size: cover;
 }
